--- a/tidy_data.html
+++ b/tidy_data.html
@@ -195,6 +195,36 @@ pulse_data</code></pre>
   gather(key = &quot;gest_day&quot;, value = &quot;weight&quot;, gd0_weight:gd18_weight) %&gt;%
   mutate(gest_day = recode(gest_day, &quot;gd0_weight&quot; = 0, &quot;gd18_weight&quot; = 18)) %&gt;%
   arrange(litter_number) </code></pre>
+<pre class="r"><code>analysis_result = tibble(
+  group = c(&quot;treatment&quot;, &quot;treatment&quot;, &quot;placebo&quot;, &quot;placebo&quot;),
+  time = c(&quot;pre&quot;, &quot;post&quot;, &quot;pre&quot;, &quot;post&quot;),
+  mean = c(4, 8, 3.5, 4)
+)</code></pre>
+<p>Make it readable</p>
+<pre class="r"><code>analysis_result %&gt;%
+  spread(key = time, value = mean) %&gt;%
+  knitr::kable()</code></pre>
+<table>
+<thead>
+<tr class="header">
+<th align="left">group</th>
+<th align="right">post</th>
+<th align="right">pre</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">placebo</td>
+<td align="right">4</td>
+<td align="right">3.5</td>
+</tr>
+<tr class="even">
+<td align="left">treatment</td>
+<td align="right">8</td>
+<td align="right">4.0</td>
+</tr>
+</tbody>
+</table>
 </div>
 
 
