--- a/tidy_data.html
+++ b/tidy_data.html
@@ -226,6 +226,78 @@ pulse_data</code></pre>
 </tbody>
 </table>
 </div>
+<div id="bind-rows" class="section level2">
+<h2>Bind rows</h2>
+<p>Read in LotR data</p>
+<pre class="r"><code>fellowship_ring = readxl::read_excel(&quot;./data/LotR_Words.xlsx&quot;, range = &quot;B3:D6&quot;) %&gt;%
+  mutate(movie = &quot;fellowship_ring&quot;)
+
+two_towers = readxl::read_excel(&quot;./data/LotR_Words.xlsx&quot;, range = &quot;F3:H6&quot;) %&gt;%
+  mutate(movie = &quot;two_towers&quot;)
+
+return_king = readxl::read_excel(&quot;./data/LotR_Words.xlsx&quot;, range = &quot;J3:L6&quot;) %&gt;%
+  mutate(movie = &quot;return_king&quot;)</code></pre>
+<p>Create final LotR data:</p>
+<pre class="r"><code>bind_rows(fellowship_ring, two_towers, return_king) %&gt;%
+  janitor::clean_names() %&gt;%
+  gather(key = sex, value = word, female:male) %&gt;%
+  mutate(race = tolower(race))</code></pre>
+<pre><code>## # A tibble: 18 x 4
+##    race   movie           sex     word
+##    &lt;chr&gt;  &lt;chr&gt;           &lt;chr&gt;  &lt;dbl&gt;
+##  1 elf    fellowship_ring female  1229
+##  2 hobbit fellowship_ring female    14
+##  3 man    fellowship_ring female     0
+##  4 elf    two_towers      female   331
+##  5 hobbit two_towers      female     0
+##  6 man    two_towers      female   401
+##  7 elf    return_king     female   183
+##  8 hobbit return_king     female     2
+##  9 man    return_king     female   268
+## 10 elf    fellowship_ring male     971
+## 11 hobbit fellowship_ring male    3644
+## 12 man    fellowship_ring male    1995
+## 13 elf    two_towers      male     513
+## 14 hobbit two_towers      male    2463
+## 15 man    two_towers      male    3589
+## 16 elf    return_king     male     510
+## 17 hobbit return_king     male    2673
+## 18 man    return_king     male    2459</code></pre>
+</div>
+<div id="join-data" class="section level2">
+<h2>Join data</h2>
+<p>Load the FAS datasets</p>
+<pre class="r"><code>pup_data = read_csv(&quot;./data/FAS_pups.csv&quot;, col_types = &quot;ciiiii&quot;) %&gt;%
+  janitor::clean_names() %&gt;%
+  mutate(sex = recode(sex, `1` = &quot;male&quot;, `2` = &quot;female&quot;)) 
+
+litter_data = read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;%
+  janitor::clean_names() %&gt;%
+  select(-pups_survive) %&gt;%
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    group = tolower(group))</code></pre>
+<p>Create joined data:</p>
+<pre class="r"><code>fas_data = left_join(pup_data, litter_data, by = &quot;litter_number&quot;)
+fas_data</code></pre>
+<pre><code>## # A tibble: 313 x 13
+##    litter_number sex   pd_ears pd_eyes pd_pivot pd_walk group gd0_weight
+##    &lt;chr&gt;         &lt;chr&gt;   &lt;int&gt;   &lt;int&gt;    &lt;int&gt;   &lt;int&gt; &lt;chr&gt;      &lt;dbl&gt;
+##  1 #85           male        4      13        7      11 con7        19.7
+##  2 #85           male        4      13        7      12 con7        19.7
+##  3 #1/2/95/2     male        5      13        7       9 con7        27  
+##  4 #1/2/95/2     male        5      13        8      10 con7        27  
+##  5 #5/5/3/83/3-3 male        5      13        8      10 con7        26  
+##  6 #5/5/3/83/3-3 male        5      14        6       9 con7        26  
+##  7 #5/4/2/95/2   male       NA      14        5       9 con7        28.5
+##  8 #4/2/95/3-3   male        4      13        6       8 con7        NA  
+##  9 #4/2/95/3-3   male        4      13        7       9 con7        NA  
+## 10 #2/2/95/3-2   male        4      NA        8      10 con7        NA  
+## # ... with 303 more rows, and 5 more variables: gd18_weight &lt;dbl&gt;,
+## #   gd_of_birth &lt;int&gt;, pups_born_alive &lt;int&gt;, pups_dead_birth &lt;int&gt;,
+## #   wt_gain &lt;dbl&gt;</code></pre>
+<p>Notice that this is done as its own step. It gets messy when you try to do it as part of a pipeline.</p>
+</div>
 
 
 
